modified the font of the header of the main page, fixed glitch where table wouldnt collapse with collapsible when clicked

--- a/cv-website/src/app/app.component.css
+++ b/cv-website/src/app/app.component.css
@@ -13,6 +13,29 @@
     font-size: 16px; /* Base font size */
     line-height: 1.6; /* Better readability */
   }
+
+
+  .website-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .website-header h1{
+    font-size: 2rem;
+    margin-left: 40%;
+    padding: auto;
+    font-family: 'Funnel', Monospace;
+  }
+
+  .website-header h2{
+    font-size: 1.5rem;
+    margin-right: 40%;
+    padding: auto;
+    font-family: 'Funnel', Monospace;
+  }
+
 /* Flexbox container */
 .collapsible-container {
   display: flex;
@@ -45,11 +68,6 @@
   display: none;
 }
 
-/* Optional: Styling for labels */
-.label {
-  font-size: 16px;
-  color: #555;
-}
 
 /* Optional: Styling for components */
 app-tech-stack,
